feat: complete service logs, mask auth emails, fix subscription guard and   externalize cors